Fix overflow and rearrange

--- a/frontend/src/index.sass
+++ b/frontend/src/index.sass
@@ -12,7 +12,7 @@ html, body, #root
 
 .full-height
     position: relative
-    height: 100%
+    height: 100% !important
 
 .page-container
     padding-top: 60px
@@ -40,5 +40,5 @@ a, a:hover
     text-decoration: none
 
 .app-page-container
-    padding-left: $side-bar-width + 15px
+    padding-left: $side-bar-width
     padding-top: 15px
